test/errors/overflow/overflow-chr.asm
.inesprg 0
.ineschr 1
.inesmap 0
.inesmir 0

.chr 0
.org $1FFF

.db $12, $34
